# algorithmsGroupProject

./: CMakeLists.txt  README.md  SDL_PLotter1.cpp  SDL_Plotter.cpp  SDL_Plotter.h  line.h  main.cpp  point.h
groupProjectXiang/: CMakeLists.txt  README.txt  SDL_Plotter.h  alphabet.h  color_rgb.cpp  color_rgb.h  curve.cpp  curve.h  line.cpp  line.h  main.cpp  point.cpp  point.h
