cmake_minimum_required(VERSION 3.13)
project(groupProject)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
find_package(SDL2 REQUIRED SDL2)
find_package(SDL2_mixer REQUIRED SDL2_mixer)
add_executable(groupProject  main.cpp SDL_Plotter.h color_rgb.cpp point.cpp line.cpp curve.cpp)
target_link_libraries(groupProject SDL2 SDL2_mixer SDL2main)